[package]
name = "pretty-good"
version = "0.2.2"
authors = ["James Forcier <james.forcier@coreos.com>"]
description = "RFC4880 (OpenPGP Message Format) library"
repository = "https://github.com/csssuf/pretty-good"
readme = "README.md"
keywords = ["pgp", "openpgp", "gpg"]
categories = ["cryptography", "parser-implementations"]
license = "Apache-2.0"

[dependencies]
byteorder = "1.2"
bzip2 = "0.3"
digest = "0.7"
failure = "0.1"
failure_derive = "0.1"
flate2 = "1"
md-5 = "0.7"
num = "0.1.40"
ripemd160 = "0.7"
sha-1 = "0.7"
sha2 = "0.7"
yasna = "0.1.3"

[dependencies.nom]
version = "^3.2"
features = ["verbose-errors"]
